--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -10,7 +10,7 @@
 
 <div class="container" layout:fragment="content">
 
-    <h2 class="header center orange-text">Login</h2>
+    <h2 class="header center orange-text">登录</h2>
     <div class="row">
         <div id="errMsg" class="row card-panel red lighten-2" th:if="${error}">
             <span class="card-title" th:text="${error}"></span>
@@ -36,6 +36,11 @@
             <!--标签名一定是th:name、th:value，否则摔跟头！-->
             <!--<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>-->
         </form>
+
+        <div class="row center">
+            <span>没有账号？<a href="/signup">注册</a></span>
+        </div>
+
     </div>
 </div>
 
