--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="layout/layout_login">
+      layout:decorator="layout/layout_login"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
+>
 <head>
     <meta charset="UTF-8"/>
     <title>login</title>
@@ -16,7 +19,7 @@
             <span class="card-title" th:text="${error}"></span>
         </div>
 
-        <form class="col s12" action="/login" method="post" th:object="${loginForm}">
+        <form class="col s12" th:action="@{/login}" method="post" th:object="${loginForm}">
             <div class="row">
                 <div class="input-field col s12">
                     <input id="username" name="username" th:field="${loginForm.username}" type="text" class="validate" placeholder="User" required="required"/>
@@ -34,7 +37,7 @@
                     <i class="mdi-content-send right"></i> </button>
             </div>
             <!--标签名一定是th:name、th:value，否则摔跟头！-->
-            <!--<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>-->
+            <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
         </form>
 
         <div class="row center">
