--- a/src/main/resources/templates/signup/signup.html
+++ b/src/main/resources/templates/signup/signup.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="layout/default">
+      layout:decorator="layout/default"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
     <meta charset="UTF-8"/>
     <title>sign up</title>
@@ -28,7 +29,7 @@
     </div>
 
     <div class="row">
-        <form action="/signup" method="post" class="col s12">
+        <form th:action="@{/signup}" method="post" class="col s12">
             <h4>注册成为新闻网会员</h4>
 
             <div class="row">
@@ -99,6 +100,9 @@
                     <input id="interests" th:field="${userForm.interests}" type="text" value="" hidden="hidden"/>
                 </div>
             </div>
+
+            <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
+
             <div class="row center">
                 <button id="submitUser" type="submit" name="submitUser" onclick="acquire()"
                         class="btn waves-effect waves-light teal lighten-2">注册为新闻网会员<i class="material-icons right">verified_user</i></button>
