--- a/src/main/resources/templates/signup/signup.html
+++ b/src/main/resources/templates/signup/signup.html
@@ -30,7 +30,7 @@
 
     <div class="row">
         <form th:action="@{/signup}" method="post" class="col s12">
-            <h4>注册成为新闻网会员</h4>
+            <h4 class="orange-text">注册成为新闻网会员</h4>
 
             <div class="row">
                 <div class="input-field col s12 m6">
@@ -86,7 +86,10 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix">stars</i>
-                    <div id="chips" class="chips chips-initial chips-placeholder chips-autocomplete"></div>
+                    <select id="interestsSelects" multiple="multiple">
+                        <option th:each="cat:${categories}" th:value="${cat.value}" th:text="${cat.value}"></option>
+                    </select>
+                    <label>兴趣标签</label>
                     <input id="interests" th:field="${userForm.interests}" type="text" value="" hidden="hidden"/>
                 </div>
             </div>
@@ -121,33 +124,6 @@
         });
         $('select').formSelect();
         $('input#userName').characterCounter();
-        $('#chips').chips({
-            placeholder: '添加兴趣标签',
-            secondaryPlaceholder: '+再来一个',
-            autocompleteOptions: {
-                data: {
-                    '公益':null,
-                    '滚动':null,
-                    '军事':null
-                }
-            },
-            onChipAdd: function (a,b) {
-                var chipContent = b.innerText;
-
-                var $ints = $('#interests');
-                $ints.attr("value", $ints.attr("value") + chipContent.substring(0, chipContent.length - 5) + ",");
-
-            },
-            onChipDelete: function () {
-                var $ints = $('#interests');
-                var last = $ints.attr("value").lastIndexOf(",",$ints.attr("value").length-2);
-                if (last ===-1) {
-                    $ints.attr("value","");
-                } else {
-                    $ints.attr("value",$ints.attr("value").substring(0,last+1));
-                }
-            }
-        });
     });
 
     function getSex() {
@@ -158,9 +134,13 @@
         var option = $('#areaOptions').find('option:selected');
         $('#area').attr('value',option.text());
     }
+    function getInterests() {
+        $('#interests').attr("value",$('#interestsSelects').formSelect('getSelectedValues')+',');
+    }
     function acquire() {
         getSex();
         getArea();
+        getInterests();
     }
 </script>
 </body>
